adding experience & education

--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6" id="computertextdiv">
-                    <img src="./static/images/57computer.jpg" id="computerimage" alt="Computer">
+            <div class="description-container row">
+                <div class="col-12 col-md-6" id="computertextdiv">
                     <div class="centered">hello.</div>
                 </div>
 
-                <div id=hellodiv class="col-md-6">
+                <div id=hellodiv class="col-12 col-md-6">
                     <img src="./static/images/arrow.png" id="arrowimage" alt="arrow">
                     <p id=hellopara>I am a creative front end developer
                         based in Lincolnshire, England. I
@@ -127,18 +126,68 @@
         <div class="experience-box-text" id="experience">
             <p class="ml2" id="experience-text">Experience</p>
         </div>
-        <div class="employmentdivs">
-            <p id="employment">EMPLOYMENT</p>
+
+        <div class="container" id="employment-container">
+            <div class="row" id="employmenttitlerow">
+                <div class="col" id="employmentdiv">
+                    <p id="employmenttext">EMPLOYMENT</p>
+                </div>
+            </div>
+            <div class="row" id="employment1row">
+                <div class="col-12 col-md-3 primarydescription">
+                    <p class="date">January 2021-Present</p>
+                    <p class="title">The Delicious Soup Kitchen</p>
+                    <p class="paragraph">I developed & started my own soup
+                        company, supplying over 350
+                        home-produced soups in a range of
+                        varieties. I advertised my soups through
+                        social media & a purposed-built
+                        website which I designed.</p>
+                </div>
+                <div class="col-12 col-md-3 primarydescription">
+                    <p class="date">July 2020-Present</p>
+                    <p class="title">R. Coy. Farmers</p>
+                    <p class="paragraph">Working on a farm, helping with crop control.</p>
+                </div>
+
+                <div class="col-12 col-md-3 primarydescription">
+                    <p class="date">April 2021-Present</p>
+                    <p class="title">Serve Legal</p>
+                    <p class="paragraph">ID testing age-restricted products.</p>
+                </div>
+                <div class="col-12 col-md-3 primarydescription">
+                    <p class="date">June 2020</p>
+                    <p class="title">Consuma Paper Products</p>
+                    <p class="paragraph">Working on a tissue production line.</p>
+                </div>
+            </div>
         </div>
-        <div id="soupdiv">
-            <p>January 2021-Present</p>
-            <p>The Delicious Soup Kitchen</p>
-            <p>I developed and started my own soup
-                company, supplying over 350
-                home-produced soups in a range of
-                varieties. I advertised my soups through
-                social media and a purposed-built
-                website which I designed.</p>
+        <div class="container" id="workexperience-container">
+            <div class="row" id="workexperiencetitlerow">
+                <div class="col" id="employmentdiv">
+                    <p id="experiencetext">WORK EXPERIENCE</p>
+                </div>
+            </div>
+            <div class="row" id="experience1row">
+                <div class="col-12 col-md-6 primarydescription">
+                    <p class="date">August 2018</p>
+                    <p class="title">CGA Personel <br> Job Recruitment</p>
+                    <p class="paragraph">My time there involved reading through
+                        CV’s and participating in interviews for job
+                        vacancies, filing paperwork and working
+                        on and designing advertising campaigns.</p>
+                </div>
+                <div class=" col-12 col-md-6 primarydescription">
+                    <p class="date">February 2019</p>
+                    <p class="title">BayTree PR <br> Marketing & Public Relations</p>
+                    <p class="paragraph">I assisted the owner of the company by
+                        editing photos using Photoshop and
+                        creating descriptions, aiding businesses to
+                        get products in the press. I also
+                        researched magazines looking for
+                        products, also discovering new journalists.</p>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -148,47 +197,115 @@
         <div class="education-box-text">
             <p class="ml2">Education</p>
         </div>
+        <div class="container" id="courses-container">
+            <div class="row" id="educationtitlerow">
+                <div class="col" id="coursesdiv">
+                    <p id="courses">COURSES</p>
+                </div>
+            </div>
+            <div class="row" id="education1row">
+                <div class="col-12 col-md-4 primarydescription">
+                    <p class="date">May 2021-Present</p>
+                    <p class="title">Front End Development<br>The Learning People</p>
+                    <p class="paragraph">A programme accredited by Microsoft
+                        and Skillsoft - covering HTML, CSS,
+                        Javascript, Python incl. frameworks and
+                        version control.</p>
+                </div>
+                <div class=" col-12 col-md-4 primarydescription">
+                    <p class="date">March 2021</p>
+                    <p class="title">SheCodes Basics<br>SheCodes</p>
+                    <p class="paragraph">Building knowledge of HTML, CSS,
+                        JavaScript & Editor.</p>
+                </div>
+                <div class=" col-12 col-md-4 primarydescription">
+                    <p class="date">December 2018</p>
+                    <p class="title">Orchards Cookery<br>Orchards Cookery School</p>
+                    <p class="paragraph">Intensive Cookery Course.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" id="exams-container">
+            <div class="row" id="examstitlerow">
+                <div class="col" id="examinationsdiv">
+                    <p id="examinations">EXAMINATIONS</p>
+                </div>
+            </div>
+            <div class="row" id="education2row">
+                <div class="col-12 col-md-6 primarydescription">
+                    <p class="date">2018-2020</p>
+                    <p class="title">A Levels <br> Oundle School</p>
+                    <p class="paragraph">English: D3 (A) <br>
+                        Economics: A <br>
+                        Politics: A</p>
+                </div>
+                <div class=" col-12 col-md-6 primarydescription">
+                    <p class="date">2015-2018</p>
+                    <p class="title">GCSE<br>Oundle School</p>
+                    <p class="paragraph">Science (Triple Award): A*A*A; Maths: 8; English Language: 9; English
+                        Literature: 8;
+                        History: A*; Latin: 8; French: A; Art & Design: 7; Religious Studies: A</p>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+
+
+
 
     <!--FORTH PAGE CONTACT-->
     <div class="contact-container">
         <div class="contact-box-text" id="contact">
             <p class="ml2">Contact Me</p>
         </div>
-        <div class="form-container">
-            <div>
-                <p id="message">Please leave me a message!</p>
+
+
+        <div class="form-container row">
+            <div class="col-12 col-md-6" id="forminformation">
+                <div>
+                    <p id="message">Please leave me a message!</p>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="name" class="form-control" id="floatingInput" placeholder="Name">
+                    <label for="floatingInput" class="label-text">Name</label>
+                </div>
+                <div class="form-floating">
+                    <input type="subject" class="form-control" id="floatingInput" placeholder="Subject">
+                    <label for="floatingPassword" class="label-text">Subject</label>
+                </div>
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput" class="label-text">Email address</label>
+                </div>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"></textarea>
+                    <label for="floatingTextarea2"
+                        style="color: white; font-family: 'Pragmatica ExtraLight Reg';">Message</label>
+                </div>
+                <button type="button" class="btn btn-primary" id="button">Send</button>
             </div>
-            <div class="form-floating mb-3">
-                <input type="name" class="form-control" id="floatingInput" placeholder="Name">
-                <label for="floatingInput" class="label-text">Name</label>
+            <div class="col-12 col-md-6" id="harrietdetails">
+                <img src="./static/images/arrow.png" id="arrowimage2" alt="arrow">
+                <p class="infotext">HARRIET.DARLEY@HOTMAIL.CO.UK</p>
+                <p class="infotext">+44 7495 539881</p>
+                <p class="infotext">LINCOLNSHIRE, ENGLAND</p>
+                <div id="media">
+                    <a href="https://www.linkedin.com/in/harriet-darley-322b6920a/" target="_blank"
+                        class="fab fa-linkedin"></a>
+                    <a href="https://github.com/harrietdarley" target="_blank" class="fab fa-github-square"></a>
+                    <a href="https://twitter.com/DarleyHarriet" target="_blank" class="fab fa-twitter-square"></a>
+                </div>
             </div>
-            <div class="form-floating">
-                <input type="subject" class="form-control" id="floatingInput" placeholder="Subject">
-                <label for="floatingPassword" class="label-text">Subject</label>
-            </div>
-            <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput" class="label-text">Email address</label>
-            </div>
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"></textarea>
-                <label for="floatingTextarea2"
-                    style="color: white; font-family: 'Pragmatica ExtraLight Reg';">Message</label>
-            </div>
-            <button type="button" class="btn btn-primary" id="button">Send</button>
         </div>
-        <div class="info-wrapper">
-            <img src="./static/images/arrow.png" id="arrowimage" alt="arrow">
-            <p class="infotext">HARRIET.DARLEY@HOTMAIL.CO.UK</p>
-            <p class="infotext">+44 7495 539881</p>
-            <p class="infotext">LINCOLNSHIRE, ENGLAND</p>
-            <div id="media">
-                <a href="https://www.linkedin.com/in/harriet-darley-322b6920a/" target="_blank"
-                    class="fab fa-linkedin"></a>
-                <a href="https://github.com/harrietdarley" target="_blank" class="fab fa-github-square"></a>
-                <a href="https://twitter.com/DarleyHarriet" target="_blank" class="fab fa-twitter-square"></a>
-            </div>
+    </div>
+
+    <!--FOOTER-->
+    <div class="wrapper" id="footercontainer">
+        <div class="footer">
+            <p id="footertext">&copy; Harriet Darley</p>
         </div>
     </div>
 
