--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harriet Darley Portfolio</title>
+    <!--  <link rel="shortcut icon" type="image/jpg" href="./static/images/favicon-32x32.png" /> -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./static/images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./static/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./static/site.webmanifest">
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -25,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbar1">
                     <ul class="nav justify-content-center">
                         <li class=" nav-item">
-                            <a class="nav-link scroll-link" href="#top-content">Home</a>
+                            <a class="nav-link scroll-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link scroll-link" href="#about-me">About</a>
@@ -46,7 +53,7 @@
     </div>
 
     <!--FIRST PAGE-->
-    <header class="top-content" id="top-content">
+    <header class="top-content" id="home">
         <div class="title-container">
             <div class="row">
                 <div id="harriet" class="col-12">
@@ -84,7 +91,7 @@
                     <p id=hellopara>I am a creative front end developer
                         based in Lincolnshire, England. I
                         have a passion for designing and
-                        creating responsive, stunning,
+                        creating responsive, stunning and
                         distinctive websites.</p>
                 </div>
             </div>
@@ -129,7 +136,7 @@
 
     <!--THIRD PAGE EXPERIENCE -->
     <div class="experience-container">
-        <div class="experience-box-text">
+        <div class="experience-box-text" id="experience">
             <p class="ml2" id="experience-text">Experience</p>
         </div>
 
