--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harriet Darley Portfolio</title>
-    <!--  <link rel="shortcut icon" type="image/jpg" href="./static/images/favicon-32x32.png" /> -->
 
     <link rel="apple-touch-icon" sizes="180x180" href="./static/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon/favicon-32x32.png">
@@ -18,7 +17,6 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/b36e6e10d4.js" crossorigin="anonymous"></script>
-
 
     <!--CSS link-->
     <link rel="stylesheet" type="text/css" href="static/css/styles.css" />
@@ -70,7 +68,6 @@
     </header>
 
     <!--SECOND PAGE ABOUT-->
-
     <div class="about-us-container section-container">
         <div class="container-fluid">
             <div class="row">
@@ -80,12 +77,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="description-container row">
                 <div class="col-12 col-md-6" id="computertextdiv">
                     <div class="centered">hello.</div>
                 </div>
-
                 <div id=hellodiv class="col-12 col-md-6">
                     <img src="./static/images/arrow.png" id="arrowimage" alt="arrow">
                     <p id=hellopara>I am a creative front end developer
@@ -139,7 +134,6 @@
         <div class="experience-box-text" id="experience">
             <p class="ml2" id="experience-text">Experience</p>
         </div>
-
         <div class="container-fluid details-container">
             <div class="row" id="employmenttitlerow">
                 <div class="col" id="employmentdiv">
@@ -162,7 +156,6 @@
                     <p class="title">R. Coy. Farmers</p>
                     <p class="paragraph">Working on a farm, helping with crop control.</p>
                 </div>
-
                 <div class="primarydescription">
                     <p class="date">April 2021-Present</p>
                     <p class="title">Serve Legal</p>
@@ -175,6 +168,7 @@
                 </div>
             </div>
         </div>
+
         <div class="container-fluid details-container">
             <div class="row" id="workexperiencetitlerow">
                 <div class="col" id="employmentdiv">
@@ -203,7 +197,6 @@
             </div>
         </div>
     </div>
-
 
     <!--THIRD PAGE EDUCATION-->
     <div class="education-container" id="education">
@@ -262,13 +255,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
-
-
-
-
 
     <!--FORTH PAGE CONTACT-->
     <div class="contact-container">
@@ -276,31 +263,37 @@
             <p class="ml2">Contact Me</p>
         </div>
 
-
         <div class="form-container row">
             <div class="col-12 col-md-6" id="forminformation">
                 <div>
                     <p id="message">Please leave me a message!</p>
                 </div>
-                <div class="form-floating mb-3">
-                    <input type="name" class="form-control" id="floatingInput" placeholder="Name">
-                    <label for="floatingInput" class="label-text">Name</label>
-                </div>
-                <div class="form-floating">
-                    <input type="subject" class="form-control" id="floatingInput" placeholder="Subject">
-                    <label for="floatingPassword" class="label-text">Subject</label>
-                </div>
-                <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput" class="label-text">Email address</label>
-                </div>
-                <div class="form-floating">
-                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"></textarea>
-                    <label for="floatingTextarea2"
-                        style="color: white; font-family: 'Pragmatica ExtraLight Reg';">Message</label>
-                </div>
-                <button type="button" class="btn btn-primary" id="button">Send</button>
+                <form id="contact-form" action="https://formspree.io/f/moqywbjl" method="POST">
+                    <div class="form-floating mb-3">
+                        <input type="name" class="form-control floatingInput" id="name" name="name" placeholder="Name"
+                            required>
+                        <label for="name" class="label-text">Name</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="subject" class="form-control floatingInput" id="subject" name="subject"
+                            placeholder="Subject" required>
+                        <label for="subject" class="label-text">Subject</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="email" class="form-control floatingInput" id="email" name="email"
+                            placeholder="name@example.com" required>
+                        <label for="email" class="label-text">Email address</label>
+                    </div>
+                    <div class="form-floating">
+                        <textarea class="form-control" id="floatingTextarea2" name="message"
+                            placeholder="Leave a comment here"></textarea>
+                        <label for="floatingTextarea2"
+                            style="color: white; font-family: 'Pragmatica ExtraLight Reg';">Message</label>
+                    </div>
+                    <input class="btn btn-primary" id="button" type="submit" value="Send" />
+                </form>
             </div>
+
             <div class="col-12 col-md-6" id="harrietdetails">
                 <img src="./static/images/arrow.png" id="arrowimage2" alt="arrow">
                 <p class="infotext">HARRIET.DARLEY@HOTMAIL.CO.UK</p>
@@ -317,12 +310,11 @@
     </div>
 
     <!--FOOTER-->
-    <div class="wrapper" id="footercontainer">
+    <footer class="wrapper" id="footercontainer">
         <div class="footer">
             <p id="footertext">&copy; Harriet Darley</p>
         </div>
-    </div>
-
+    </footer>
 
     <!-- Bootstrap Javascript Bundle-->
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
