changes to readme (features and technology)

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                     <div>
                         <p id="message">Please leave me a message!</p>
                     </div>
+                    <!--Form: https://formspree.io -->
                     <form id="contact-form" action="https://formspree.io/f/moqywbjl" method="POST">
                         <div class="form-floating mb-3">
                             <input type="name" class="form-control floatingInput" id="name" name="name"
