--- a/index.html
+++ b/index.html
@@ -103,14 +103,15 @@
                                 <div class="icons">
                                     <div class="icon-circle">
                                         <!--Icons: https://icons8.com -->
-                                        <img src="https://img.icons8.com/color/80/000000/html-5--v1.png"
+                                        <img src="https://img.icons8.com/color/80/000000/html-5--v1.png" alt="html-icon"
                                             id="html-icon" />
                                     </div>
                                     <span class="iconcaption">HTML5</span>
                                 </div>
                                 <div class="icons">
                                     <div class="icon-circle">
-                                        <img src="https://img.icons8.com/color/80/4a90e2/css3.png" id="css-icon" />
+                                        <img src="https://img.icons8.com/color/80/4a90e2/css3.png" alt="css-icon"
+                                            id="css-icon" />
                                     </div>
                                     <span class="iconcaption">CSS3</span>
                                 </div>
@@ -119,14 +120,14 @@
                                 <div class="icons">
                                     <div class="icon-circle">
                                         <img src="https://img.icons8.com/color/80/000000/javascript.png"
-                                            id="java-icon" />
+                                            alt="javascript-icon" id="java-icon" />
                                     </div>
                                     <span class="iconcaption">JavaScript</span>
                                 </div>
                                 <div class="icons">
                                     <div class="icon-circle">
                                         <img src="https://img.icons8.com/color/80/000000/bootstrap.png"
-                                            id="boot-icon" />
+                                            alt="bootstrap-icon" id="boot-icon" />
                                     </div>
                                     <span class="iconcaption">Bootstrap</span>
                                 </div>
@@ -276,12 +277,12 @@
                     <!--Form: https://formspree.io -->
                     <form id="contact-form" action="https://formspree.io/f/moqywbjl" method="POST">
                         <div class="form-floating mb-3">
-                            <input type="name" class="form-control floatingInput" id="name" name="name"
+                            <input type="text" class="form-control floatingInput" id="name" name="name"
                                 placeholder="Name" required>
                             <label for="name" class="label-text">Name</label>
                         </div>
                         <div class="form-floating">
-                            <input type="subject" class="form-control floatingInput" id="subject" name="subject"
+                            <input type="text" class="form-control floatingInput" id="subject" name="subject"
                                 placeholder="Subject" required>
                             <label for="subject" class="label-text">Subject</label>
                         </div>
